--- a/src/output.css
+++ b/src/output.css
@@ -660,12 +660,12 @@ video {
   z-index: 50;
 }
 
-.z-\[9999999\] {
-  z-index: 9999999;
+.z-\[-1\] {
+  z-index: -1;
 }
 
-.z-\[99999\] {
-  z-index: 99999;
+.z-\[9999999\] {
+  z-index: 9999999;
 }
 
 .z-\[9999\] {
@@ -800,6 +800,10 @@ video {
   min-height: 80vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-14 {
   width: 3.5rem;
 }
@@ -844,20 +848,8 @@ video {
   width: 280px;
 }
 
-.w-\[300px\] {
-  width: 300px;
-}
-
 .w-\[350px\] {
   width: 350px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[70\%\] {
-  width: 70%;
 }
 
 .w-\[70vw\] {
@@ -874,6 +866,10 @@ video {
 
 .w-\[80vw\] {
   width: 80vw;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[90vw\] {
@@ -910,12 +906,6 @@ video {
 
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-\[1\.1\] {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1094,11 +1084,6 @@ video {
   background-color: rgb(78 20 140 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -1152,6 +1137,11 @@ video {
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900 {
@@ -1350,8 +1340,9 @@ video {
   line-height: 2.5rem;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .text-lg {
@@ -1408,6 +1399,10 @@ video {
 
 .leading-5 {
   line-height: 1.25rem;
+}
+
+.leading-\[3rem\] {
+  line-height: 3rem;
 }
 
 .leading-relaxed {
