--- a/src/output.css
+++ b/src/output.css
@@ -713,6 +713,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-\[113px\] {
+  margin-top: 113px;
+}
+
 .mt-\[60px\] {
   margin-top: 60px;
 }
@@ -772,16 +776,8 @@ video {
   height: 22rem;
 }
 
-.h-\[28rem\] {
-  height: 28rem;
-}
-
 .h-\[30\%\] {
   height: 30%;
-}
-
-.h-\[50px\] {
-  height: 50px;
 }
 
 .h-\[50vh\] {
@@ -900,10 +896,6 @@ video {
   width: 70vw;
 }
 
-.w-\[75vw\] {
-  width: 75vw;
-}
-
 .w-\[80\%\] {
   width: 80%;
 }
@@ -989,10 +981,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 
 .items-start {
@@ -1347,6 +1335,10 @@ video {
   padding-bottom: 3px;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -1393,14 +1385,6 @@ video {
 
 .pt-\[60px\] {
   padding-top: 60px;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -1756,12 +1740,12 @@ video {
     display: none;
   }
 
-  .md\:h-\[32rem\] {
-    height: 32rem;
-  }
-
   .md\:h-\[28rem\] {
     height: 28rem;
+  }
+
+  .md\:h-\[32rem\] {
+    height: 32rem;
   }
 
   .md\:h-full {
@@ -1784,12 +1768,12 @@ video {
     width: 72%;
   }
 
-  .md\:w-\[80vw\] {
-    width: 80vw;
-  }
-
   .md\:w-\[75vw\] {
     width: 75vw;
+  }
+
+  .md\:w-\[80vw\] {
+    width: 80vw;
   }
 
   .md\:grid-cols-3 {
@@ -1808,10 +1792,6 @@ video {
     gap: 0.25rem;
   }
 
-  .md\:bg-center {
-    background-position: center;
-  }
-
   .md\:p-4 {
     padding: 1rem;
   }
@@ -1826,13 +1806,17 @@ video {
     padding-right: 2rem;
   }
 
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 
-  .md\:py-0 {
-    padding-top: 0px;
+  .md\:pb-0 {
     padding-bottom: 0px;
   }
 
@@ -1842,10 +1826,6 @@ video {
 
   .md\:pt-0 {
     padding-top: 0px;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
   }
 
   .md\:text-left {
