--- a/src/output.css
+++ b/src/output.css
@@ -824,10 +824,6 @@ video {
   min-height: 30px;
 }
 
-.min-h-\[75vh\] {
-  min-height: 75vh;
-}
-
 .min-h-\[80vh\] {
   min-height: 80vh;
 }
@@ -882,10 +878,6 @@ video {
 
 .w-\[350px\] {
   width: 350px;
-}
-
-.w-\[50\%\] {
-  width: 50%;
 }
 
 .w-\[655px\] {
@@ -1093,12 +1085,12 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-bl-2xl {
-  border-bottom-left-radius: 1rem;
-}
-
 .rounded-tl-2xl {
   border-top-left-radius: 1rem;
+}
+
+.rounded-tr-2xl {
+  border-top-right-radius: 1rem;
 }
 
 .border {
@@ -1189,11 +1181,6 @@ video {
 .bg-slate-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900 {
@@ -1305,11 +1292,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1351,6 +1333,10 @@ video {
   padding-bottom: 1rem;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .pb-\[68px\] {
   padding-bottom: 68px;
 }
@@ -1361,10 +1347,6 @@ video {
 
 .pl-\[30\%\] {
   padding-left: 30%;
-}
-
-.pr-8 {
-  padding-right: 2rem;
 }
 
 .pt-2 {
@@ -1756,12 +1738,24 @@ video {
     min-height: 200px;
   }
 
+  .md\:min-h-\[75vh\] {
+    min-height: 75vh;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
 
   .md\:w-\[32rem\] {
     width: 32rem;
+  }
+
+  .md\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .md\:w-\[70vw\] {
+    width: 70vw;
   }
 
   .md\:w-\[72\%\] {
@@ -1792,6 +1786,14 @@ video {
     gap: 0.25rem;
   }
 
+  .md\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .md\:rounded-bl-2xl {
+    border-bottom-left-radius: 1rem;
+  }
+
   .md\:p-4 {
     padding: 1rem;
   }
@@ -1811,6 +1813,11 @@ video {
     padding-bottom: 0px;
   }
 
+  .md\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -1824,8 +1831,16 @@ video {
     padding-bottom: 75px;
   }
 
+  .md\:pr-8 {
+    padding-right: 2rem;
+  }
+
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pt-4 {
+    padding-top: 1rem;
   }
 
   .md\:text-left {
