--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:   Webel_child
+Theme Name:   webel_store
 Description:  Tema hijo 
 Author:       keinnerross
 Author URL:   keinnerross.io
