--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ Description:  Tema hijo
 Author:       keinnerross
 Author URL:   keinnerross.io
 Template:     storefront
-Version:      10.1
+Version:      Beta 10.2
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  webel_child
+Date:         22/11/2024
 */
 
 :root {
