--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Description:  Tema hijo
 Author:       keinnerross
 Author URL:   keinnerross.io
 Template:     storefront
-Version:      Beta 10.2
+Version:      2.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  webel_child
